fix: non-transparent lightbox gallery background on mobiles

--- a/web-foundations/18.03/src/components/portfolio/portfolio.component.scss
+++ b/web-foundations/18.03/src/components/portfolio/portfolio.component.scss
@@ -103,6 +103,7 @@
 @mixin portfolio-desktop() {
   // include dependencies
   @include project-post-desktop();
+  @include project-gallery-lightbox-desktop();
 }
 
 @mixin portfolio-hover() {
