--- a/web-foundations/18.03/src/components/project-gallery-lightbox/project-gallery-lightbox.component.scss
+++ b/web-foundations/18.03/src/components/project-gallery-lightbox/project-gallery-lightbox.component.scss
@@ -16,7 +16,7 @@
 
     &.show {
       display: block;
-      background: rgba(0, 0, 0, .85);
+      background: rgba(0, 0, 0, 1);
     }
 
     .swiper-button-close {
@@ -117,10 +117,17 @@
       width: 16px;
       height: 16px;
       margin: auto 8px;
+      border: 1px solid #007aff;
+      border-radius: 8px;
+      opacity: .3;
 
       &:focus {
         outline-width: 0;
       }
+    }
+
+    .swiper-pagination-bullet-active {
+      opacity: 1;
     }
 
     // navigation buttons
@@ -174,6 +181,12 @@
     position: absolute;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .5) 100%);
     pointer-events: none;
+  }
+}
+
+@mixin project-gallery-lightbox-desktop {
+  .project-gallery-lightbox.show {
+    background: rgba(0, 0, 0, .8);
   }
 }
 
